more fixes for latency issue on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -231,7 +231,12 @@
   @apply flex-1 relative flex items-center justify-center overflow-hidden;
 }
 
-.spot-diff-image {
+.spot-diff-image,
+.spot-diff-canvas {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   max-width: 100%;
   max-height: 100%;
   width: auto;
@@ -240,10 +245,6 @@
 }
 
 .spot-diff-canvas {
-  @apply absolute;
-  max-width: 100%;
-  max-height: 100%;
-  object-fit: contain;
   touch-action: manipulation;
   cursor: pointer;
 }
